--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Direct Actions for Prison Abolition
+title: Direct Action for Prison Abolition
 email: netanyabomani@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/da4a" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: netabomani
 github_username:  netanoir
@@ -34,7 +34,8 @@ theme: minima
 plugins:
   - jekyll-feed
 collections:
-  - spreads
+  actions:
+    output: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
